bug 442511: cleanup https://bugs.eclipse.org/bugs/show_bug.cgi?id=442511
Change-Id: Ia1b7e4287f3137bd9f38b18764e86041a380ab2b
Signed-off-by: Judith Gull <jgu@bsiag.com>
Reviewed-on: https://git.eclipse.org/r/32473
Tested-by: Hudson CI